# datatalks-data-eng-zoomcamp

./: .gitignore  README.md
homework/: homework.ipynb
week1_Docker_Terraform/: Dockerfile  docker-compose.yaml  ingest_data.py  pyproject.toml
week1_Docker_Terraform/homework/: homework.ipynb
week1_Docker_Terraform/terraform_demo/: variables.tf
week2_workflow_orchestation/homework/: homework.ipynb
week2_workflow_orchestation/mage_data/magic-zoomcamp/pipelines/green_taxi_etl/.variables/transform_data/output_0/: data.parquet  sample_data.parquet
week4_dbt/: .gitignore  dbt_project.yml
week4_dbt/models/core/: fact_fhv.sql
week4_dbt/models/staging/: schema.yml  stg_fhv.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
week5_batch_processing/: Makefile  commands
week5_batch_processing/homework/: homework.ipynb
week6_streaming/: pyproject.toml  test_kafka.py  test_msg_kafka.py  test_send_real_data.py
